[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI/SocialGraph/PersonNode.gd" type="Script" id=1]

[node name="Control" type="GraphNode"]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 60 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 67.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
readonly = true

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
